# SplatSnap

./: .gitignore  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  render_splats.py  requirements.txt  run.sh
.github/workflows/: python-tests.yml
paper/: paper.bib  paper.md
splatsnap/: render_splats.py
tests/: test_render.py
